language Selector : style , functionallity bug fixed , text align in farsi mode fixed , icons changed , UI improved

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,11 +11,7 @@
     background-color: $primary;
     text-align: center;
 }
-.languageSelector {
-    position: fixed;
-    right: 0;
-    top: 0;
-}
+
 p , input{
     font-family: cursive,"Tanha" !important;
     font-size: 1rem
