--- a/src/components/LanguageSelector/LanguageSelector.module.scss
+++ b/src/components/LanguageSelector/LanguageSelector.module.scss
@@ -1,3 +1,15 @@
-.container{
-    
+@import "../../colors.scss";
+.container {
+    position: fixed;
+    left: 5px;
+    top: 5px;
+    .options{
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        gap: 3px;
+        color:$tertiary;
+        font-family: cursive;
+        font-size: 12px;
+    }
 }
