--- a/src/components/Task/Task.module.scss
+++ b/src/components/Task/Task.module.scss
@@ -92,6 +92,7 @@
     color: $secondary;
     font-weight: bold;
     font-size: small;
+    user-select: none;
   }
 }
 .taskDone {
